peac_dev/force-app/main/default/objects/Financial_Bank_Information__c/Financial_Bank_Information__c.object-meta.xml
<CustomObject>
    <label>Bank Information</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Bank Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Bank Information</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>