peac_dev/force-app/main/default/objects/Financial_Bank_Information__c/fields/Average_Opening_Balance__c.field-meta.xml
<CustomField>
    <fullName>Average_Opening_Balance__c</fullName>
    <label>Average Opening Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>