peac_dev/force-app/main/default/objects/Financial_Bank_Information__c/fields/Bank_Account_Number__c.field-meta.xml
<CustomField>
    <fullName>Bank_Account_Number__c</fullName>
    <description>Store Bank Account Number</description>
    <label>Account Number</label>
    <length>50</length>
    <maskChar>X</maskChar>
    <maskType>creditCard</maskType>
    <type>EncryptedText</type>
</CustomField>