peac_dev/force-app/main/default/objects/Financial_Bank_Information__c/fields/Bank_Account_Number_No_Masking__c.field-meta.xml
<CustomField>
    <fullName>Bank_Account_Number_No_Masking__c</fullName>
    <description>Store Bank account number without masking</description>
    <encryptionScheme>CaseSensitiveDeterministicEncryption</encryptionScheme>
    <label>Account Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>