peac_dev/force-app/main/default/objects/Financial_Bank_Information__c/fields/Bank_Account_Type__c.field-meta.xml
<CustomField>
    <fullName>Bank_Account_Type__c</fullName>
    <label>Bank Account Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Checking</fullName>
            </value>
            <value>
                <fullName>Savings</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>CREDITCARD</fullName>
            </value>
            <value>
                <fullName>UNKNOWN</fullName>
            </value>
            <value>
                <fullName>SWEEP</fullName>
            </value>
            <value>
                <fullName>IOLTA</fullName>
            </value>
            <value>
                <fullName>RESERVE</fullName>
            </value>
            <value>
                <fullName>CASHMANAGEMENT</fullName>
            </value>
            <value>
                <fullName>CASH MANAGEMENT</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>