peac_dev/force-app/main/default/objects/Financial_Bank_Information__c/fields/Bank_Information_External_ID__c.field-meta.xml
<CustomField>
    <fullName>Bank_Information_External_ID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>Bank Information External ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>