peac_dev/force-app/main/default/objects/Financial_Bank_Information__c/fields/Bank_State__c.field-meta.xml
<CustomField>
    <fullName>Bank_State__c</fullName>
    <label>Bank State</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>State_Code</valueSetName>
    </valueSet>
</CustomField>