peac_dev/force-app/main/default/objects/Financial_Bank_Information__c/fields/Bank_Statement_Count__c.field-meta.xml
<CustomField>
    <fullName>Bank_Statement_Count__c</fullName>
    <label>Bank Statement Count</label>
    <summaryFilterItems>
        <field>Bank_Statement__c.Exclude__c</field>
        <operation>equals</operation>
        <value>False</value>
    </summaryFilterItems>
    <summaryForeignKey>Bank_Statement__c.Bank_Information__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>