peac_dev/force-app/main/default/objects/Financial_Bank_Information__c/fields/Bank_Zip__c.field-meta.xml
<CustomField>
    <fullName>Bank_Zip__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Bank Zip</label>
    <length>255</length>
    <type>Text</type>
</CustomField>