peac_dev/force-app/main/default/objects/Financial_Bank_Information__c/fields/Daily_Average_Balance__c.field-meta.xml
<CustomField>
    <fullName>Daily_Average_Balance__c</fullName>
    <formula>Total_Daily_Average_Balance__c / Bank_Statement_Count__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Daily Average Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>