peac_dev/force-app/main/default/objects/Financial_Bank_Information__c/fields/Financial__c.field-meta.xml
<CustomField>
    <fullName>Financial__c</fullName>
    <label>Financial</label>
    <referenceTo>Financial__c</referenceTo>
    <relationshipLabel>Bank Information</relationshipLabel>
    <relationshipName>Bank_Information</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>