peac_dev/force-app/main/default/objects/Financial_Bank_Information__c/fields/Negative_Days_Average__c.field-meta.xml
<CustomField>
    <fullName>Negative_Days_Average__c</fullName>
    <formula>Total_Negative_Days__c /  Bank_Statement_Count__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Negative Days Average</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>