peac_dev/force-app/main/default/objects/Financial_Bank_Information__c/fields/NSFs_Average__c.field-meta.xml
<CustomField>
    <fullName>NSFs_Average__c</fullName>
    <formula>Total_NSFs__c /  Bank_Statement_Count__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>NSFs Average</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>