peac_dev/force-app/main/default/objects/Financial_Bank_Information__c/fields/Number_of_Deposits_Average__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Deposits_Average__c</fullName>
    <formula>Total_Number_of_Deposits__c /  Bank_Statement_Count__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Number of Deposits Average</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>