peac_dev/force-app/main/default/objects/Financial_Bank_Information__c/fields/Opening_Balance_Average__c.field-meta.xml
<CustomField>
    <fullName>Opening_Balance_Average__c</fullName>
    <formula>Total_Opening_Balance__c /  Bank_Statement_Count__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opening Balance Average</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>