peac_dev/force-app/main/default/objects/Financial_Bank_Information__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Bank Information</relationshipLabel>
    <relationshipName>Financial_Bank_Information</relationshipName>
    <type>Lookup</type>
</CustomField>