peac_dev/force-app/main/default/objects/Financial_Bank_Information__c/fields/Routing_Number__c.field-meta.xml
<CustomField>
    <fullName>Routing_Number__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Routing Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>