peac_dev/force-app/main/default/objects/Financial_Bank_Information__c/fields/Suspicious_Activity__c.field-meta.xml
<CustomField>
    <fullName>Suspicious_Activity__c</fullName>
    <description>Count Suspicious Activity from bank statements</description>
    <label>Suspicious Activity</label>
    <summaryFilterItems>
        <field>Bank_Statement__c.Suspicious_Activity__c</field>
        <operation>notEqual</operation>
        <value></value>
    </summaryFilterItems>
    <summaryForeignKey>Bank_Statement__c.Bank_Information__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>