peac_dev/force-app/main/default/objects/Financial_Bank_Information__c/fields/Total_NSFs__c.field-meta.xml
<CustomField>
    <fullName>Total_NSFs__c</fullName>
    <label>Total NSFs</label>
    <summarizedField>Bank_Statement__c.NSFs__c</summarizedField>
    <summaryFilterItems>
        <field>Bank_Statement__c.Exclude__c</field>
        <operation>equals</operation>
        <value>False</value>
    </summaryFilterItems>
    <summaryForeignKey>Bank_Statement__c.Bank_Information__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>